crates/pandalang/src/snapshots/pandalang__parser__tests__parses@fun__apply_body.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/fun/apply_body.panda
---
Ok(
    Fun(
        Fun {
            patt: Id {
                name: "f",
            },
            body: Fun(
                Fun {
                    patt: Id {
                        name: "x",
                    },
                    body: App(
                        App {
                            fun: Var(
                                Var {
                                    name: "f",
                                },
                            ),
                            arg: Var(
                                Var {
                                    name: "x",
                                },
                            ),
                        },
                    ),
                },
            ),
        },
    ),
)
