crates/pandalang/src/snapshots/pandalang__parser__tests__parses@fun__id.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/fun/id.panda
---
Ok(
    Fun(
        Fun {
            patt: Id {
                name: "x",
            },
            body: Var(
                Var {
                    name: "x",
                },
            ),
        },
    ),
)
