crates/pandalang/src/snapshots/pandalang__parser__tests__parses@fun__nested.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/fun/nested.panda
---
Ok(
    Fun(
        Fun {
            patt: Id {
                name: "x",
            },
            body: Fun(
                Fun {
                    patt: Id {
                        name: "y",
                    },
                    body: BinOp(
                        BinOp {
                            left: Var(
                                Var {
                                    name: "x",
                                },
                            ),
                            right: Var(
                                Var {
                                    name: "y",
                                },
                            ),
                            kind: Add,
                        },
                    ),
                },
            ),
        },
    ),
)
